java 11 cleanup